--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -1,390 +1,391 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="{{encoding}}">
-    <title>{{title}}</title>
-    <style type="text/css">
-      body {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        color: #222;
-        background-color: #f7f7f7;
-        font-size: 100%;
-      }
-      
-      #wrapper {
-        width: 850px;
-        height: 600px;
-        overflow: hidden;
-        margin: 80px auto 0 auto;
-      }
-      
-      .slide {
-        width: auto;
-        height: 540px;
-        padding: 30px;
-        font-weight: 200;
-        font-size: 200%;
-        line-height: 1.375;
-      }
-      
-      .controls {
-        position: absolute;
-        bottom: 20px;
-        left: 20px;
-      }
-      
-      .controls .arrow {
-        width: 0; height: 0;
-        border: 30px solid #333;
-        float: left;
-        margin-right: 30px;
-      
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-      
-      .controls .prev {
-        border-top-color: transparent;
-        border-bottom-color: transparent;
-        border-left-color: transparent;
-      
-        border-left-width: 0;
-        border-right-width: 50px;
-      }
-      
-      .controls .next {
-        border-top-color: transparent;
-        border-bottom-color: transparent;
-        border-right-color: transparent;
-      
-        border-left-width: 50px;
-        border-right-width: 0;
-      }
-      
-      .controls .prev:hover {
-        border-right-color: #888;
-        cursor: pointer;
-      }
-      
-      .controls .next:hover {
-        border-left-color: #888;
-        cursor: pointer;
-      }
-      
-      .slide h1 {
-        font-size: 300%;
-        line-height: 1.2;
-        text-align: center;
-        margin: 170px 0 0;
-      }
-      
-      .slide h2 {
-        font-size: 100%;
-        line-height: 1.2;
-        margin: 5px 0;
-        text-align: center;
-        font-weight: 200;
-      }
-      
-      .slide h3 {
-        font-size: 140%;
-        line-height: 1.2;
-        border-bottom: 1px solid #aaa;
-        margin: 0;
-        padding-bottom: 15px;
-      }
-      
-      .slide ul {
-        padding: 20px 0 0 60px;
-        font-weight: 200;
-        line-height: 1.375;
-      }
-      
-      .slide .author h1.name {
-        font-size: 170%;
-        font-weight: 200;
-        text-align: center;
-        margin-bottom: 30px;
-      }
-      
-      .slide .author h3 {
-        font-weight: 100;
-        text-align: center;
-        font-size: 95%;
-        border: none;
-      }
-      
-      a {
-        text-decoration: none;
-        color: #44a4dd;
-      }
-      
-      a:hover {
-        color: #66b5ff;
-      }
-      
-      pre {
-        font-size: 60%;
-        line-height: 1.3;
-      }
-      
-      .progress {
-        position: fixed;
-        top: 0; left: 0; right: 0;
-        height: 3px;
-      }
-      
-      .progress-bar {
-        width: 0%;
-        height: 3px;
-        background-color: #b4b4b4;
-      
-        -webkit-transition: width 0.1s ease-out;
-        -moz-transition: width 0.1s ease-out;
-        -o-transition: width 0.1s ease-out;
-        transition: width 0.1s ease-out;
-      }
-      
-      @media (max-width: 850px) {
-        #wrapper {
-          width: auto;
-        }
-      
-        body {
-          font-size: 70%;
-        }
-      
-        img {
-          width: 100%;
-        }
-      
-        .slide h1 {
-          margin-top: 120px;
-        }
-      
-        .controls .prev, .controls .prev:hover {
-          border-right-color: rgba(135, 135, 135, 0.5);
-        }
-      
-        .controls .next, .controls .next:hover {
-          border-left-color: rgba(135, 135, 135, 0.5);
-        }
-      }
-      
-      @media (max-width: 480px) {
-        body {
-          font-size: 50%;
-          overflow: hidden;
-        }
-      
-        #wrapper {
-          margin-top: 10px;
-          height: 340px;
-        }
-      
-        .slide {
-          padding: 10px;
-          height: 340px;
-        }
-      
-        .slide h1 {
-          margin-top: 50px;
-        }
-      
-        .slide ul {
-          padding-left: 25px;
-        }
-      }
-      
-      @media print {
-        * {
-          -webkit-print-color-adjust: exact;
-        }
-      
-        @page {
-          size: letter;
-        }
-      
-        html {
-          width: 100%;
-          height: 100%;
-          overflow: visible;
-        }
-      
-        body {
-          margin: 0 auto !important;
-          border: 0;
-          padding: 0;
-          float: none !important;
-          overflow: visible;
-          background: none !important;
-          font-size: 52%;
-        }
-      
-        .progress, .controls {
-          display: none;
-        }
-      
-        #wrapper {
-          overflow: visible;
-          height: 100%;
-          margin-top: 0;
-        }
-      
-        .slide {
-          border: 1px solid #222;
-          margin-bottom: 40px;
-          height: 3.5in;
-        }
-      
-        .slide:nth-child(odd) {
-          /* 2 slides per page */
-          page-break-before: always;
-        }
-      }
-      /*
-      github.com style (c) Vasily Polovnyov <vast@whiteants.net>
-      */
-      
-      code, pre {
-        border: 1px solid #ddd;
-        border-radius: 3px;
-        overflow: auto;
-        padding: 6px 10px;
-      }
-      
-      code {
-        padding: 0 5px;
-      }
-      
-      pre>code {
-        margin: 0; padding: 0;
-        border: none;
-        background: transparent;
-      }
-      
-      pre .comment,
-      pre .template_comment,
-      pre .diff .header,
-      pre .javadoc {
-        color: #998;
-        font-style: italic
-      }
-      
-      pre .keyword,
-      pre .css .rule .keyword,
-      pre .winutils,
-      pre .javascript .title,
-      pre .nginx .title,
-      pre .subst,
-      pre .request,
-      pre .status {
-        color: #333;
-        font-weight: bold
-      }
-      
-      pre .number,
-      pre .hexcolor,
-      pre .ruby .constant {
-        color: #099;
-      }
-      
-      pre .string,
-      pre .tag .value,
-      pre .phpdoc,
-      pre .tex .formula {
-        color: #d14
-      }
-      
-      pre .title,
-      pre .id {
-        color: #900;
-        font-weight: bold
-      }
-      
-      pre .javascript .title,
-      pre .lisp .title,
-      pre .clojure .title,
-      pre .subst {
-        font-weight: normal
-      }
-      
-      pre .class .title,
-      pre .haskell .type,
-      pre .vhdl .literal,
-      pre .tex .command {
-        color: #458;
-        font-weight: bold
-      }
-      
-      pre .tag,
-      pre .tag .title,
-      pre .rules .property,
-      pre .django .tag .keyword {
-        color: #000080;
-        font-weight: normal
-      }
-      
-      pre .attribute,
-      pre .variable,
-      pre .lisp .body {
-        color: #008080
-      }
-      
-      pre .regexp {
-        color: #009926
-      }
-      
-      pre .class {
-        color: #458;
-        font-weight: bold
-      }
-      
-      pre .symbol,
-      pre .ruby .symbol .string,
-      pre .lisp .keyword,
-      pre .tex .special,
-      pre .prompt {
-        color: #990073
-      }
-      
-      pre .built_in,
-      pre .lisp .title,
-      pre .clojure .built_in {
-        color: #0086b3
-      }
-      
-      pre .preprocessor,
-      pre .pi,
-      pre .doctype,
-      pre .shebang,
-      pre .cdata {
-        color: #999;
-        font-weight: bold
-      }
-      
-      pre .deletion {
-        background: #fdd
-      }
-      
-      pre .addition {
-        background: #dfd
-      }
-      
-      pre .diff .change {
-        background: #0086b3
-      }
-      
-      pre .chunk {
-        color: #aaa
-      }
-    </style>
-  </head>
-  <body>
-    {{{slideshow}}}
-  </body>
+<head>
+  <meta charset="{{encoding}}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <title>{{title}}</title>
+  <style type="text/css">
+    body {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #222;
+  background-color: #f7f7f7;
+  font-size: 100%;
+}
+
+#wrapper {
+  width: 850px;
+  height: 600px;
+  overflow: hidden;
+  margin: 80px auto 0 auto;
+}
+
+.slide {
+  width: auto;
+  height: 540px;
+  padding: 30px;
+  font-weight: 200;
+  font-size: 200%;
+  line-height: 1.375;
+}
+
+.controls {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.controls .arrow {
+  width: 0; height: 0;
+  border: 30px solid #333;
+  float: left;
+  margin-right: 30px;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.controls .prev {
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+
+  border-left-width: 0;
+  border-right-width: 50px;
+}
+
+.controls .next {
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+
+  border-left-width: 50px;
+  border-right-width: 0;
+}
+
+.controls .prev:hover {
+  border-right-color: #888;
+  cursor: pointer;
+}
+
+.controls .next:hover {
+  border-left-color: #888;
+  cursor: pointer;
+}
+
+.slide h1 {
+  font-size: 300%;
+  line-height: 1.2;
+  text-align: center;
+  margin: 170px 0 0;
+}
+
+.slide h2 {
+  font-size: 100%;
+  line-height: 1.2;
+  margin: 5px 0;
+  text-align: center;
+  font-weight: 200;
+}
+
+.slide h3 {
+  font-size: 140%;
+  line-height: 1.2;
+  border-bottom: 1px solid #aaa;
+  margin: 0;
+  padding-bottom: 15px;
+}
+
+.slide ul {
+  padding: 20px 0 0 60px;
+  font-weight: 200;
+  line-height: 1.375;
+}
+
+.slide .author h1.name {
+  font-size: 170%;
+  font-weight: 200;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.slide .author h3 {
+  font-weight: 100;
+  text-align: center;
+  font-size: 95%;
+  border: none;
+}
+
+a {
+  text-decoration: none;
+  color: #44a4dd;
+}
+
+a:hover {
+  color: #66b5ff;
+}
+
+pre {
+  font-size: 60%;
+  line-height: 1.3;
+}
+
+.progress {
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  height: 3px;
+}
+
+.progress-bar {
+  width: 0%;
+  height: 3px;
+  background-color: #b4b4b4;
+
+  -webkit-transition: width 0.1s ease-out;
+  -moz-transition: width 0.1s ease-out;
+  -o-transition: width 0.1s ease-out;
+  transition: width 0.1s ease-out;
+}
+
+@media (max-width: 850px) {
+  #wrapper {
+    width: auto;
+  }
+
+  body {
+    font-size: 70%;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .slide h1 {
+    margin-top: 120px;
+  }
+
+  .controls .prev, .controls .prev:hover {
+    border-right-color: rgba(135, 135, 135, 0.5);
+  }
+
+  .controls .next, .controls .next:hover {
+    border-left-color: rgba(135, 135, 135, 0.5);
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 50%;
+    overflow: hidden;
+  }
+
+  #wrapper {
+    margin-top: 10px;
+    height: 340px;
+  }
+
+  .slide {
+    padding: 10px;
+    height: 340px;
+  }
+
+  .slide h1 {
+    margin-top: 50px;
+  }
+
+  .slide ul {
+    padding-left: 25px;
+  }
+}
+
+@media print {
+  * {
+    -webkit-print-color-adjust: exact;
+  }
+
+  @page {
+    size: letter;
+  }
+
+  html {
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+  }
+
+  body {
+    margin: 0 auto !important;
+    border: 0;
+    padding: 0;
+    float: none !important;
+    overflow: visible;
+    background: none !important;
+    font-size: 52%;
+  }
+
+  .progress, .controls {
+    display: none;
+  }
+
+  #wrapper {
+    overflow: visible;
+    height: 100%;
+    margin-top: 0;
+  }
+
+  .slide {
+    border: 1px solid #222;
+    margin-bottom: 40px;
+    height: 3.5in;
+  }
+
+  .slide:nth-child(odd) {
+    /* 2 slides per page */
+    page-break-before: always;
+  }
+}
+/*
+github.com style (c) Vasily Polovnyov <vast@whiteants.net>
+*/
+
+code, pre {
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  overflow: auto;
+  padding: 6px 10px;
+}
+
+code {
+  padding: 0 5px;
+}
+
+pre>code {
+  margin: 0; padding: 0;
+  border: none;
+  background: transparent;
+}
+
+pre .comment,
+pre .template_comment,
+pre .diff .header,
+pre .javadoc {
+  color: #998;
+  font-style: italic
+}
+
+pre .keyword,
+pre .css .rule .keyword,
+pre .winutils,
+pre .javascript .title,
+pre .nginx .title,
+pre .subst,
+pre .request,
+pre .status {
+  color: #333;
+  font-weight: bold
+}
+
+pre .number,
+pre .hexcolor,
+pre .ruby .constant {
+  color: #099;
+}
+
+pre .string,
+pre .tag .value,
+pre .phpdoc,
+pre .tex .formula {
+  color: #d14
+}
+
+pre .title,
+pre .id {
+  color: #900;
+  font-weight: bold
+}
+
+pre .javascript .title,
+pre .lisp .title,
+pre .clojure .title,
+pre .subst {
+  font-weight: normal
+}
+
+pre .class .title,
+pre .haskell .type,
+pre .vhdl .literal,
+pre .tex .command {
+  color: #458;
+  font-weight: bold
+}
+
+pre .tag,
+pre .tag .title,
+pre .rules .property,
+pre .django .tag .keyword {
+  color: #000080;
+  font-weight: normal
+}
+
+pre .attribute,
+pre .variable,
+pre .lisp .body {
+  color: #008080
+}
+
+pre .regexp {
+  color: #009926
+}
+
+pre .class {
+  color: #458;
+  font-weight: bold
+}
+
+pre .symbol,
+pre .ruby .symbol .string,
+pre .lisp .keyword,
+pre .tex .special,
+pre .prompt {
+  color: #990073
+}
+
+pre .built_in,
+pre .lisp .title,
+pre .clojure .built_in {
+  color: #0086b3
+}
+
+pre .preprocessor,
+pre .pi,
+pre .doctype,
+pre .shebang,
+pre .cdata {
+  color: #999;
+  font-weight: bold
+}
+
+pre .deletion {
+  background: #fdd
+}
+
+pre .addition {
+  background: #dfd
+}
+
+pre .diff .change {
+  background: #0086b3
+}
+
+pre .chunk {
+  color: #aaa
+}
+  </style>
+</head>
+<body>
+  {{{slideshow}}}
+</body>
 </html>
